syntax = "proto3";

option go_package = "github.com/paysuper/paysuper-billing-server/pkg/proto/billing";
package billing;

import "google/protobuf/timestamp.proto";

message Name {
    // @inject_tag: bson:"EN" json:"EN" structure:"EN"
    string en = 1;
    // @inject_tag: bson:"RU" json:"RU" structure:"RU"
    string ru = 2;
}

message OrderCreateRequest {
    // @inject_tag: query:"PO_PROJECT_ID" form:"PO_PROJECT_ID" json:"project" validate:"required,hexadecimal"
    string project_id = 1;
    // @inject_tag: query:"PO_SIGNATURE" form:"PO_SIGNATURE" validate:"omitempty,alphanum"
    string signature = 2;
    // @inject_tag: query:"PO_AMOUNT" form:"PO_AMOUNT" json:"amount" validate:"required,numeric"
    double amount = 3;
    // @inject_tag: query:"PO_CURRENCY" form:"PO_CURRENCY" json:"currency" validate:"omitempty,alpha,len=3"
    string currency = 4;
    // @inject_tag: "PO_ACCOUNT" form:"PO_ACCOUNT" json:"account"`
    string account = 5;
    // @inject_tag: query:"PO_ORDER_ID" form:"PO_ORDER_ID" json:"order_id" validate:"omitempty,len=255"
    string order_id = 6;
    // @inject_tag: query:"PO_DESCRIPTION" form:"PO_DESCRIPTION" json:"description" validate:"omitempty,len=255"
    string description = 7;
    // @inject_tag: query:"PO_PAYMENT_METHOD" form:"PO_PAYMENT_METHOD" json:"payment_method" validate:"omitempty,len=255"
    string payment_method = 8;
    // @inject_tag: query:"PO_URL_VERIFY" form:"PO_URL_VERIFY" json:"url_verify" validate:"omitempty,url"
    string url_verify = 9;
    // @inject_tag: query:"PO_URL_NOTIFY" form:"PO_URL_NOTIFY" json:"url_notify" validate:"omitempty,url"
    string url_notify = 10;
    // @inject_tag: query:"PO_URL_SUCCESS" form:"PO_URL_SUCCESS" json:"url_success" validate:"omitempty,url"
    string url_success = 11;
    // @inject_tag: query:"PO_URL_FAIL" form:"PO_URL_FAIL" json:"url_fail" validate:"omitempty,url"
    string url_fail = 12;
    // @inject_tag: query:"PO_PAYER_EMAIL" form:"PO_PAYER_EMAIL" json:"payer_email" validate:"omitempty,email"
    string payer_email = 13;
    // @inject_tag: query:"PO_PAYER_PHONE" form:"PO_PAYER_PHONE" json:"payer_phone" validate:"omitempty,len=255"
    string payer_phone = 14;
    // @inject_tag: query:"PO_REGION" form:"PO_REGION" json:"region" validate:"omitempty,alpha,len=2"
    string region = 15;
    string payer_ip = 16;
    map<string, string> other = 17;
    // @inject_tag: json:"-"
    map<string, string> raw_params = 18;
    // @inject_tag: json:"-"
    string raw_body = 19; //`json:"-"`
    // @inject_tag: json:"-"
    bool is_json = 20;
    // @inject_tag: json:"-"
    string language = 21;
}

message Project {
    // @inject_tag: bson:"_id" structure:"_id,bsonobjectid"
    string id = 1; // unique project identifier
    // @inject_tag: bson:"callback_currency" structure:"callback_currency"
    Currency callback_currency = 2; // full object of currency which described currency to send payment notification
    // @inject_tag: bson:"callback_protocol" structure:"callback_protocol"
    string callback_protocol = 3; // protocol identifier to send payment notification. possible values: default, cardpay, xsolla
    // @inject_tag: bson:"create_invoice_allowed_urls" structure:"create_invoice_allowed_urls"
    repeated string create_invoice_allowed_urls = 4; // list of urls rom which you can send a request to create an order
    // @inject_tag: bson:"merchant" json:"-" structure:"merchant"
    Merchant merchant = 5; // full object of merchant which describes project's owner
    // @inject_tag: bson:"allow_dynamic_notify_urls"
    bool allow_dynamic_notify_urls = 6; // is allow send dynamic notification urls in request to create an order
    // @inject_tag: bson:"allow_dynamic_redirect_urls"
    bool allow_dynamic_redirect_urls = 7; // is allow send dynamic user's redirect urls in request to create an order
    // @inject_tag: bson:"limits_currency" structure:"limits_currency"
    Currency limits_currency = 8; // full object of currency which describes currency for amount's limit
    // @inject_tag: bson:"max_payment_amount" structure:"max_payment_amount"
    double max_payment_amount = 9; // maximal amount allowed for create order
    // @inject_tag: bson:"min_payment_amount" structure:"min_payment_amount"
    double min_payment_amount = 10; // minimal amount allowed for create order
    // @inject_tag: bson:"name" structure:"name"
    string name = 11; // project name
    // @inject_tag: bson:"notify_emails" structure:"notify_emails"
    repeated string notify_emails = 12; // list of emails to send notifications about successfully completed payment operations
    // @inject_tag: bson:"only_fixed_amounts" structure:"only_fixed_amounts"
    bool only_fixed_amounts = 13; // is allow create order only with amounts from fixed packages list
    // @inject_tag: bson:"secret_key" structure:"secret_key"
    string secret_key = 14; // secret key for create check hash for request about order statuses changes
    // @inject_tag: bson:"signature_required"
    bool signature_required = 15;
    // @inject_tag: bson:"send_notify_email" structure:"send_notify_email"
    bool send_notify_email = 16; // is allow send notifications about successfully completed payment operations to user's emails
    // @inject_tag: bson:"url_check_account" structure:"url_check_account"
    string url_check_account = 17; // default url to send request for verification payment data to project
    // @inject_tag: bson:"url_process_payment" structure:"url_process_payment"
    string url_process_payment = 18; // default url to send request for notification about successfully completed payment to project
    // @inject_tag: bson:"url_redirect_fail" structure:"url_redirect_fail"
    string url_redirect_fail = 19; // default url to redirect user after failed payment
    // @inject_tag: bson:"url_redirect_success" structure:"url_redirect_success"
    string url_redirect_success = 20; // default url to redirect user after successfully completed payment
    // @inject_tag: bson:"fixed_package" structure:"fixed_package"
    map<string, FixedPackages> fixed_package = 21; // list of project's fixed packages
    // @inject_tag: bson:"payment_methods" structure:"payment_methods"
    map<string, ProjectPaymentMethod> payment_methods = 22; // list of payment methods allowed to project
    // @inject_tag: bson:"is_active" structure:"is_active"
    bool is_active = 23; // is project active
    // @inject_tag: bson:"created_at"
    google.protobuf.Timestamp created_at = 24;
    // @inject_tag: bson:"updated_at"
    google.protobuf.Timestamp updated_at = 25;
}

message ProjectOrder {
    // @inject_tag: bson:"_id" structure:"_id,bsonobjectid"
    string id = 1;
    // @inject_tag: bson:"name" structure:"name"
    string name = 2;
    // @inject_tag: bson:"url_redirect_success" structure:"url_redirect_success"
    string url_success = 3;
    // @inject_tag: bson:"url_redirect_fail" structure:"url_redirect_fail"
    string url_fail = 4;
    // @inject_tag: bson:"notify_emails" structure:"notify_emails"
    repeated string notify_emails = 5;
    // @inject_tag: bson:"secret_key" structure:"secret_key"
    string secret_key = 6;
    // @inject_tag: bson:"send_notify_email" structure:"send_notify_email"
    bool send_notify_email = 7;
    // @inject_tag: bson:"url_check_account" structure:"url_check_account"
    string url_check_account = 8;
    // @inject_tag: bson:"url_process_payment" structure:"url_process_payment"
    string url_process_payment = 9;
    // @inject_tag: bson:"callback_protocol" structure:"callback_protocol"
    string callback_protocol = 10;
    // @inject_tag: bson:"merchant" structure:"merchant"
    Merchant merchant = 12;
}

message MerchantContact {
    // @inject_tag: validate:"required,dive"
    MerchantContactAuthorized authorized = 1;
    // @inject_tag: validate:"required,dive"
    MerchantContactTechnical technical = 2;
}

message MerchantContactTechnical {
    string name = 1;
    // @inject_tag: validate:"omitempty,email"
    string email = 2;
    // @inject_tag: validate:"omitempty,phone"
    string phone = 3;
}

message MerchantContactAuthorized {
    string name = 1;
    // @inject_tag: validate:"omitempty,email"
    string email = 2;
    // @inject_tag: validate:"omitempty,phone"
    string phone = 3;
    string position = 4;
}

message MerchantBanking {
    Currency currency = 1;
    string name = 2;
    string address = 3;
    string account_number = 4;
    string swift = 5;
    string details = 6;
}

message MerchantLastPayout {
    google.protobuf.Timestamp date = 1;
    double amount = 2;
}

message Merchant {
    // @inject_tag: bson:"_id"
    string id = 1;
    string name = 4;
    string alternative_name = 5;
    string website = 6;
    Country country = 7;
    string state = 8;
    string zip = 9;
    string city = 10;
    string address = 11;
    string address_additional = 12;
    string registration_number = 13;
    string tax_id = 14;
    MerchantContact contacts = 15;
    MerchantBanking banking = 16;
    // @inject_tag: bson:"status"
    int32 status = 17;
    // @inject_tag: bson:"created_at"
    google.protobuf.Timestamp created_at = 18;
    // @inject_tag: bson:"updated_at"
    google.protobuf.Timestamp updated_at = 19;
    // @inject_tag: bson:"first_payment_at"
    google.protobuf.Timestamp first_payment_at = 20;
    // @inject_tag: json:"-"
    bool is_vat_enabled = 21;
    // @inject_tag: json:"-"
    bool is_commission_to_user_enabled = 22;
    // @inject_tag: json:"-"
    bool has_merchant_signature = 23;
    // @inject_tag: json:"-"
    bool has_psp_signature = 24;
    MerchantLastPayout last_payout = 25;
    bool is_signed = 26;
    map<string, MerchantPaymentMethod> payment_methods = 28;
}

message Notification {
    string id = 1;
    string title = 2;
    string message = 3;
    string merchant_id = 4;
    string user_id = 5;
    bool is_system = 6;
    bool is_read = 7;
    google.protobuf.Timestamp created_at = 8;
    google.protobuf.Timestamp updated_at = 9;
}

message OrderPlatformFee {
    float amount = 1;
    string currency = 2;
    float effective_rate = 3;
}

message OrderTax {
    string type = 1;
    float rate = 2;
    float amount = 3;
    string currency = 4;
}

message OrderBillingAddress {
    string country = 1;
    string city = 2;
    string postal_code = 3;
    string state = 4;
}

message Order {
    string id = 1; // unique order identifier in Protocol One
    // @inject_tag: bson:"project" structure:"project"
    ProjectOrder project = 2; // object described main entities of project in Protocol One payment solution
    // @inject_tag: bson:"project_order_id" structure:"project_order_id"
    string project_order_id = 3; // unique order identifier in project. if was send in create order process
    // @inject_tag: bson:"project_account" structure:"project_account"
    string project_account = 4; // user unique account in project
    // @inject_tag: bson:"description" structure:"description"
    string description = 5; // order description
    // @inject_tag: bson:"project_income_amount" structure:"project_income_amount"
    double project_income_amount = 6; // order amount received from project
    // @inject_tag: bson:"project_income_currency" structure:"project_income_currency"
    Currency project_income_currency = 7; // order currency received from project
    // @inject_tag: bson:"project_outcome_amount" structure:"project_outcome_amount"
    double project_outcome_amount = 8; // order amount send to project in notification request
    // @inject_tag: bson:"project_outcome_currency" structure:"project_outcome_currency"
    Currency project_outcome_currency = 9; // order currency send to project in notification request
    // @inject_tag: bson:"project_last_requested_at" structure:"project_last_requested_at,timestamp"
    google.protobuf.Timestamp project_last_requested_at = 10; // date of last notification request to project
    // @inject_tag: bson:"project_params" structure:"project_params"
    map<string, string> project_params = 11; // any project params which received from project in request of create of order
    // @inject_tag: bson:"payer_data" structure:"payer_data"
    PayerData payer_data = 12; // information about payer, for example: ip, email,phone and etc
    // @inject_tag: bson:"payment_method" structure:"payment_method"
    PaymentMethodOrder payment_method = 13; // payment method unique identifier
    // @inject_tag: bson:"pm_order_id" structure:"pm_order_id"
    string payment_method_order_id = 14; // unique order id in payment system
    // @inject_tag: bson:"pm_outcome_amount" structure:"pm_outcome_amount"
    double payment_method_outcome_amount = 15; // order amount send to payment system
    // @inject_tag: bson:"pm_outcome_currency" structure:"pm_outcome_currency"
    Currency payment_method_outcome_currency = 16; // order currency send to payment system
    // @inject_tag: bson:"pm_income_amount" structure:"pm_income_amount"
    double payment_method_income_amount = 17; // order amount received from payment system in notification request
    // @inject_tag: bson:"pm_income_currency" structure:"pm_income_currency"
    Currency payment_method_income_currency = 18; // order currency received from payment system in notification request
    // @inject_tag: bson:"pm_order_close_date" structure:"pm_order_close_date,timestamp"
    google.protobuf.Timestamp payment_method_order_closed_at = 19; // date of ended payment operation in payment system
    // @inject_tag: bson:"status" structure:"status"
    int32 status = 20; // order status
    // @inject_tag: bson:"created_at" structure:"created_at,timestamp"
    google.protobuf.Timestamp created_at = 21; // date of create order
    // @inject_tag: bson:"updated_at" structure:"updated_at,timestamp"
    google.protobuf.Timestamp updated_at = 22; // date of last update order data
    // @inject_tag: bson:"created_by_json" structure:"created_by_json"
    bool is_json_request = 23; // is order create by json request
    // @inject_tag: bson:"amount_psp_ac" structure:"amount_psp_ac"
    double amount_in_psp_accounting_currency = 24; // operation amount in accounting currency of PSP
    // @inject_tag: bson:"amount_in_merchant_ac" structure:"amount_in_merchant_ac"
    double amount_in_merchant_accounting_currency = 25; // received from project operation amount in project owner (merchant) accounting currency
    // @inject_tag: bson:"amount_out_merchant_ac" structure:"amount_out_merchant_ac"
    double amount_out_merchant_accounting_currency = 26; // received from payment system operation amount in project owner (merchant) accounting currency
    // @inject_tag: bson:"amount_ps_ac" structure:"amount_ps_ac"
    double amount_in_payment_system_accounting_currency = 27; // operation amount in payment system accounting currency
    // @inject_tag: bson:"pm_account" structure:"pm_account"
    string payment_method_payer_account = 28; // account of payer in payment system
    // @inject_tag: bson:"pm_txn_params" structure:"pm_txn_params"
    map<string, string> payment_method_txn_params = 29; // any params received in request of payment system about payment
    // @inject_tag: bson:"fixed_package" structure:"fixed_package"
    FixedPackage fixed_package = 30; // fixed package which buy payer
    // @inject_tag: bson:"payment_requisites" json:"-" structure:"payment_requisites"
    map<string, string> payment_requisites = 31;
    // @inject_tag: bson:"psp_fee_amount" structure:"psp_fee_amount"
    OrderFeePsp psp_fee_amount = 32; // PSP (P1) fee amount
    // @inject_tag: bson:"project_fee_amount" structure:"project_fee_amount"
    OrderFee project_fee_amount = 33; // fee is charged with the project for the operation
    // @inject_tag: bson:"to_payer_fee_amount" structure:"to_payer_fee_amount"
    OrderFee to_payer_fee_amount = 34; // value of fee which added to payer amount
    // @inject_tag: bson:"vat_amount" structure:"vat_amount"
    // @inject_tag: bson:"ps_fee_amount" structure:"ps_fee_amount"
    OrderFeePaymentSystem payment_system_fee_amount = 36; // payment system fee for payment operation

    OrderTax tax = 37;
    // @inject_tag: json:"-"
    string uuid = 38;
    // @inject_tag: json:"-"
    google.protobuf.Timestamp expire_date_to_form_input = 39;
    double total_payment_amount = 43; // total amount to payment with all commissions
    OrderBillingAddress billing_address = 44; // user billing address entered in payment form

    // @inject_tag: json:"-"
    bool user_address_data_required = 45;
}

message Currency {
    // @inject_tag: bson:"code_int"
    int32 code_int = 1;
    // @inject_tag: bson:"code_a3"
    string code_a3 = 2;
    // @inject_tag: bson:"name"
    Name name = 4;
    // @inject_tag: bson:"is_active"
    bool is_active = 5;
    // @inject_tag: bson:"created_at"
    google.protobuf.Timestamp created_at = 6;
    // @inject_tag: bson:"updated_at"
    google.protobuf.Timestamp updated_at = 7;
}

message PayerData {
    // @inject_tag: bson:"ip" structure:"ip"
    string ip = 1; // payer ip from create order request
    // @inject_tag: bson:"country_code_a2" structure:"country_code_a2"
    string country = 2; // payer country code by ISO 3166-1 from create order request
    // @inject_tag: bson:"country_name" structure:"country_name"
    Name country_name = 3; // payer country names
    // @inject_tag: bson:"city" structure:"city"
    Name city = 4; // payer city names, get from ip geo location
    string zip = 5;
    string state = 6;
    string language = 7;
    // @inject_tag: bson:"timezone" structure:"timezone"
    string timezone = 9; // payer timezone name, get from ip geo location
    // @inject_tag: bson:"phone" structure:"phone"
    string phone = 10; // payer phone from create order request
    // @inject_tag: bson:"email" structure:"email"
    string email = 11; // payer email from create order request
}

message PaymentMethodOrder {
    // @inject_tag: bson:"_id" structure:"_id,bsonobjectid"
    string id = 1;
    // @inject_tag: bson:"name" structure:"name"
    string name = 2;
    // @inject_tag: bson:"params" structure:"params"
    PaymentMethodParams params = 3;
    // @inject_tag: bson:"payment_system" structure:"payment_system"
    PaymentSystem payment_system = 4;
    // @inject_tag: bson:"group_alias" structure:"group_alias"
    string group = 5;
}

message PaymentMethodParams {
    // @inject_tag: bson:"handler" structure:"handler"
    string handler = 1;
    // @inject_tag: bson:"terminal" structure:"terminal"
    string terminal = 2;
    // @inject_tag: bson:"password"
    string password = 3;
    // @inject_tag: bson:"callback_password"
    string callback_password = 5;
    // @inject_tag: bson:"external_id" structure:"external_id"
    string external_id = 6;
    // @inject_tag: bson:"other" structure:"other"
    map<string, string> other = 7;
}

message PaymentSystem {
    // @inject_tag: bson:"_id" structure:"_id,bsonobjectid"
    string id = 1;
    string name = 2;
    // @inject_tag: bson:"country" structure:"country"
    Country Country = 3;
    // @inject_tag: bson:"accounting_currency" structure:"accounting_currency"
    Currency accounting_currency = 4;
    // @inject_tag: bson:"accounting_period" structure:"accounting_period"
    string accounting_period = 5;
    // @inject_tag: bson:"is_active" structure:"is_active"
    bool is_active = 6;
    // @inject_tag: bson:"created_at" structure:"created_at,timestamp"
    google.protobuf.Timestamp created_at = 7;
    // @inject_tag: bson:"updated_at" structure:"updated_at,timestamp"
    google.protobuf.Timestamp updated_at = 8;
}

message FixedPackage {
    // @inject_tag: bson:"id" structure:"id"
    string id = 1; // unique identifier of package
    // @inject_tag: bson:"name" structure:"name"
    string name = 2; // package name
    // @inject_tag: bson:"currency"
    Currency currency = 3;
    // @inject_tag: bson:"price" structure:"price"
    double price = 4; // package price in chosen currency
    // @inject_tag: bson:"is_active" structure:"is_active"
    bool is_active = 5; // is package active
}

message FixedPackages {
    repeated FixedPackage fixed_package = 1;
}

message OrderFee {
    // @inject_tag: bson:"amount_payment_method_currency" structure:"amount_payment_method_currency"
    double AmountPaymentMethodCurrency = 1; // amount of fee of payment system in payment currency
    // @inject_tag: bson:"amount_merchant_currency" structure:"amount_merchant_currency"
    double AmountMerchantCurrency = 2; // amount of fee of payment system in accounting currency of merchant
}

message OrderFeePsp {
    // @inject_tag: bson:"amount_payment_method_currency" structure:"amount_payment_method_currency"
    double AmountPaymentMethodCurrency = 1; // amount of fee of payment system in payment currency
    // @inject_tag: bson:"amount_merchant_currency" structure:"amount_merchant_currency"
    double AmountMerchantCurrency = 2; // amount of fee of payment system in accounting currency of merchant
    // @inject_tag: bson:"amount_psp_currency" structure:"amount_psp_currency"
    double AmountPspCurrency = 3; // amount of fee of PSP (P1) in PSP (P1) accounting currencies
}

// Contain information about payment system commission in other currencies
message OrderFeePaymentSystem {
    // @inject_tag: bson:"amount_payment_method_currency" structure:"amount_payment_method_currency"
    double AmountPaymentMethodCurrency = 1; // amount of fee of payment system in payment currency
    // @inject_tag: bson:"amount_merchant_currency" structure:"amount_merchant_currency"
    double AmountMerchantCurrency = 2; // amount of fee of payment system in accounting currency of merchant
    // @inject_tag: bson:"amount_payment_system_currency" structure:"amount_payment_system_currency"
    double AmountPaymentSystemCurrency = 3; // amount of fee of payment system in accounting currency of payment system
}

message ProjectPaymentMethod {
    // @inject_tag: bson:"_id"
    string id = 1;
    // @inject_tag: bson:"terminal"
    string terminal = 2;
    // @inject_tag: bson:"password"
    string password = 3;
    // @inject_tag: bson:"callback_password"
    string callback_password = 4;
    // @inject_tag: bson:"created_at"
    google.protobuf.Timestamp created_at = 5;
}

message CurrencyRate {
    // @inject_tag: bson:"_id"
    string id = 1;
    // @inject_tag: bson:"currency_from"
    int32 currency_from = 2;
    // @inject_tag: bson:"currency_to"
    int32 currency_to = 3;
    // @inject_tag: bson:"rate"
    double rate = 4;
    // @inject_tag: bson:"is_active"
    bool is_active = 5;
    // @inject_tag: bson:"date"
    google.protobuf.Timestamp date = 6;
    // @inject_tag: bson:"created_at"
    google.protobuf.Timestamp created_at = 7;
}

message PaymentMethod {
    // @inject_tag: bson:"_id"
    string id = 1;
    // @inject_tag: bson:"name"
    string name = 2;
    // @inject_tag: bson:"group_alias"
    string group = 3;
    // @inject_tag: bson:"currency"
    Currency currency = 4;
    // @inject_tag: bson:"currencies"
    repeated int32 currencies = 5;
    // @inject_tag: bson:"min_payment_amount"
    double min_payment_amount = 6;
    // @inject_tag: bson:"max_payment_amount"
    double max_payment_amount = 7;
    // @inject_tag: bson:"params"
    PaymentMethodParams params = 8;
    // @inject_tag: bson:"icon"
    string Icon = 9;
    // @inject_tag: bson:"payment_system"
    PaymentSystem payment_system = 10;
    // @inject_tag: bson:"type"
    string type = 11;
    // @inject_tag: bson:"account_regexp"
    string account_regexp = 12;
    // @inject_tag: bson:"is_active"
    bool is_active = 13;
    // @inject_tag: bson:"created_at"
    google.protobuf.Timestamp created_at = 14;
    // @inject_tag: bson:"updated_at"
    google.protobuf.Timestamp updated_at = 15;
}

message Country {
    // @inject_tag: bson:"code_int"
    int32 code_int = 1;
    // @inject_tag: bson:"code_a2"
    string code_a2 = 2;
    // @inject_tag: bson:"code_a3"
    string code_a3 = 3;
    // @inject_tag: bson:"name"
    Name name = 4;
    // @inject_tag: bson:"is_active"
    bool is_active = 5;
    // @inject_tag: bson:"created_at"
    google.protobuf.Timestamp created_at = 6;
    // @inject_tag: bson:"updated_at"
    google.protobuf.Timestamp updated_at = 7;
}

message Vat {
    // @inject_tag: bson:"_id"
    string id = 1;
    // @inject_tag: bson:"country"
    Country country = 2;
    // @inject_tag: bson:"subdivision_code"
    string subdivision = 3;
    // @inject_tag: bson:"vat"
    double vat = 4;
    // @inject_tag: bson:"is_active"
    bool is_active = 5;
    // @inject_tag: bson:"created_at"
    google.protobuf.Timestamp created_at = 8;
    // @inject_tag: bson:"updated_at"
    google.protobuf.Timestamp updated_at = 9;
}

message Commission {
    // @inject_tag: bson:"_id"
    string id = 1;
    // @inject_tag: bson:"pm_id"
    string payment_method_id = 2;
    // @inject_tag: bson:"project_id"
    string project_id = 3;
    // @inject_tag: bson:"pm_commission"
    double payment_method_commission = 4;
    // @inject_tag: bson:"psp_commission"
    double psp_commission = 5;
    // @inject_tag: bson:"total_commission_to_user"
    double total_commission_to_user = 6;
    // @inject_tag: bson:"start_date"
    google.protobuf.Timestamp start_date = 7;
    // @inject_tag: bson:"created_at"
    google.protobuf.Timestamp created_at = 8;
    // @inject_tag: bson:"updated_at"
    google.protobuf.Timestamp updated_at = 9;
}

message CardExpire {
    // @inject_tag: bson:"month"
    string month = 1;
    // @inject_tag: bson:"year"
    string year = 2;
}

message SavedCard {
    string id = 1;
    string pan = 2;
    CardExpire expire = 3;
}

message PaymentFormPaymentMethod {
    string id = 1;
    string name = 2;
    string icon = 3;
    string type = 4;
    // @inject_tag: json:"group_alias"
    string group = 5;
    string account_regexp = 6;
    string currency = 9;
    // @inject_tag: json:"has_saved_cards"
    bool has_saved_cards = 12;
    // @inject_tag: json:"saved_cards,omitempty"
    repeated SavedCard saved_cards = 13;
}

message MerchantPaymentMethodPerTransactionCommission {
    // @inject_tag: validate:"omitempty,numeric,gte=0"
    double fee = 1;
    string currency = 2;
}

message MerchantPaymentMethodCommissions {
    // @inject_tag: validate:"omitempty,numeric,gte=0,lte=100"
    double fee = 1;
    // @inject_tag: validate:"required,dive"
    MerchantPaymentMethodPerTransactionCommission per_transaction = 2;
}

message MerchantPaymentMethodIntegration {
    string terminal_id = 1;
    string terminal_password = 2;
    string terminal_callback_password = 3;
    bool integrated = 4;
}

message MerchantPaymentMethodIdentification {
    // @inject_tag: validate:"required,hexadecimal,len=24"
    string id = 1;
    // @inject_tag: validate:"required"
    string name = 2;
}

message MerchantPaymentMethod {
    MerchantPaymentMethodIdentification payment_method = 3;
    MerchantPaymentMethodCommissions commission = 4;
    MerchantPaymentMethodIntegration integration = 5;
    bool is_active = 6;
}

message RefundPayerData {
    string country = 1;
    string zip = 2;
    string state = 3;
}

message Refund {
    string id = 1;
    string order_id = 2;
    string external_id = 3;
    double amount = 4;
    string creatorId = 5;
    string reason = 6;
    Currency currency = 7;
    int32 status = 8;
    google.protobuf.Timestamp created_at = 9;
    google.protobuf.Timestamp updated_at = 10;
    RefundPayerData payer_data = 11;
    float sales_tax = 12;
}
